[package]
name = "pixi-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.9", features = ["derive"] }
lopdf = "0.31.0"
tar = "0.4.40"
tempfile = "3.8.1"
walkdir = "2.4.0"
zstd = "0.13.0"
