[package]
name = "pixi-pdf"
description = "A tool to create executable PDF files by embedding pixi projects in them"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Wolf Vollprecht <w.vollprecht@gmail.com>"]
readme = "README.md"
homepage = "https://pixi.sh"

[dependencies]
clap = { version = "4.4.9", features = ["derive"] }
lopdf = "0.31.0"
tar = "0.4.40"
tempfile = "3.8.1"
walkdir = "2.4.0"
zstd = "0.13.0"
